@@ -1,3 +1,7 @@
+2005-04-03 Toady <toady@gscore.org>
+
+	* src/edit.c: improved measure jumping
+	
 2005-04-02 Toady <toady@gscore.org>
 
 	* src/score.c: Replace "set header" glade widget with custom to make the release in 2005 and stop fighting with glade for MDI stuff
